--- a/index.html
+++ b/index.html
@@ -12,25 +12,18 @@
   </head>
   <body>
     <main>
-      <img src="./images/profile-pic.png" alt="Jessica Randall" />
-      <h1>Jessica Randall</h1>
-      <p>London, United Kingdom</p>
-      <p>"Front-end developer and avid reader."</p>
-      <ul>
+      <img src="" alt="POULE" />
+
+      <h1 class="name">anxyum</h1>
+      <p class="location">Unknown</p>
+      <p class="description">
+        J'aime jouer à minecraft.<br />
+        Je suis un dark sasuke.
+      </p>
+
+      <ul class="buttons">
         <li>
-          <a href="#">GitHub</a>
-        </li>
-        <li>
-          <a href="#">FrontEnd Mentor</a>
-        </li>
-        <li>
-          <a href="#">LinkedIn</a>
-        </li>
-        <li>
-          <a href="#">Twitter</a>
-        </li>
-        <li>
-          <a href="#">Instagram</a>
+          <a href="https://github.com/anxyum">GitHub</a>
         </li>
       </ul>
     </main>
